Fix summary scroll bar visibility

--- a/src/components/ShowDetail/ShowDetail.css
+++ b/src/components/ShowDetail/ShowDetail.css
@@ -20,10 +20,14 @@
   text-align: center;
 }
 
+.detail-container {
+  overflow: hidden;
+}
+
 .summary {
   font-size: 0.8rem;
 
-  overflow: scroll;
+  overflow-y: auto;
 
   height: 95px;
 }
